--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Hughes
-          <span class="text-primary">Steven</span>
+        <h1 class="mb-0" id="lastname">Hughes
+          <span class="text-primary" id="firstname">Steven</span>
         </h1>
         <div class="subheading mb-5">Al Zeina, A1, Unit 817 · Abu Dhabi, UAE · +971 50 948 9252 ·
           <a href="mailto:steveh385@hotmail.com">steveh385@hotmail.com</a>
