reworded some of the text

--- a/index.html
+++ b/index.html
@@ -69,16 +69,21 @@
         <div class="subheading mb-5">Al Zeina, A1, Unit 817 · Abu Dhabi, UAE · +971 50 948 9252 ·
           <a href="mailto:steveh385@hotmail.com">steveh385@hotmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I have spent the last 20 years working as a electrician on large, diverse construction projects ranging from green energy, oil and gas, commercial and industrial.
+          Since moving to the UAE I am interested to apply my web dev skills as a new professional direction.
+          In 2017, I completed several Udemy courses on HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/steve-hughes-713980172/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/profile.php?id=519616926" target="_blank">
             <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://www.udemy.com/" target="_blank">
+            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
           </a>
         </div>
       </div>
