--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from studying to become a web developer, I also train dogs and teach tennis. Living in Abu Dhabi gives me the freedom to be outdoors year round, which lets me enjoy my favorite activities, such as golfing, kayaking, snorkeling and occasionlly some boating.</p>
+        <p class="mb-0">When I get some free time I like to practice building new websites to improve my web dev skills. I am always looking on tech sites to see what the new fad is in coding and any updates that languages may have introduced.</p>
       </div>
     </section>
 
@@ -239,30 +239,36 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+             Certificate of Completion - Build Responsive Real World Websites with HTML5 and CSS3 (Udemy)
+            </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+             Certificate of Completion - JavaScript Beginners's Step By Step Guide
+            </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Certificate of Completion - JavaScript (Udemy)
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+             Certificate of Completion - Programming for Entrepreneurs (Udemy)
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+             Certificate of Completion - Ultimite JavaScript Strings (Udemy)
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
+             Certificate of Completion - The Complete Web Developer Course 2.0 (Udemy)
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+             Certificate of Completion - The Web Developer Bootcamp (Udemy)
+           </li>
+           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+             Certificate of Completion - Wordpress for Beginners (Udemy)
+           </li>
         </ul>
       </div>
     </section>
