added some new text for education

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <p class="lead mb-5">I have spent the last 20 years working as a electrician on large, diverse construction projects ranging from green energy, oil and gas, commercial and industrial.
           Since moving to the UAE I am interested to apply my web dev skills as a new professional direction.
-          In 2017, I completed several Udemy courses on HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line.</p>
+          In 2017, I completed several Udemy courses on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line.</strong></p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/steve-hughes-713980172/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -151,24 +151,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">George Brown College</h3>
+            <div class="subheading mb-3">Programmabler Logic Controllers</div>
+            <div>Completed with honors. Writing ladder logic to control conveyor belt systems at Distribution Centers. Also completed projects including traffic light systems, and robotics for car plant automation.  </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">August 2009 - August 2010</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Northern Alberta Institute of Technology</h3>
+            <div class="subheading mb-3">Electrical Journeyman Certificate</div>
+            <div>Received my journeyman electrical licence where I specialized in oil and gas, green energy, industrial, commercial and fire alarm systems </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">February 1996 - April 2002</span>
+          </div>
+        </div>
+        <br/>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">St.Lawrence High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div>Graduated grade 12 with french and english immersion</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 1987 - June 1991</span>
           </div>
         </div>
 
