--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <p class="lead mb-5">I have spent the last 20 years working as a electrician on large, diverse construction projects ranging from green energy, oil and gas, commercial and industrial.
           Since moving to the UAE I am interested to apply my web dev skills as a new professional direction.
-          In 2017, I completed several Udemy courses on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line.</strong></p>
+          In 2017, I completed several <em>Udemy</em> courses on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line</strong></p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/steve-hughes-713980172/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -97,45 +97,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Jr Web Developer</h3>
+            <div class="subheading mb-3">AstroLabs</div>
+            <p>Currently enrolled in a AstroLabs coding bootcamp that is JavaScript based. We are learning to build a social media website from scratch. With this bootcamp we will also learn how to launch a site with Wordpress and how to deploy a site with GitHub along with GitBash, as well as buiding mobile apps.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary"> June 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Electrician</h3>
+            <div class="subheading mb-3">Hydro One</div>
+            <p>Hydro One is Canada’s largest electricity transmission and distribution service provider. They transmit and distribute electricity across Ontario, home to 38 per cent of Canada’s population. 
+              While working on the TS Scarborough, which is a 230Kv to 27.6kv site, my duties where to isolate equipment by installing grounds, opening circuit and walking down the line to verify any hazardous live equipment. 
+              </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">October 2017 - December 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Maintenance Electrician</h3>
+            <div class="subheading mb-3">WalMart Distribution Center</div>
+            <p>Worked as a maintenance electrician at the Walmart warehouse. As an employee, my duties were to keep the machinery and plant running optimally with zero downtime. My responsibilities were to undertake preventive maintenance, record logs of certain equipment and to run diagnostics on the PLC programming.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">March 2013 - August 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Electrical Foreman</h3>
+            <div class="subheading mb-3">Syncrude Oil</div>
+            <p>While at Syncrude, I was the foreman of a 10-man crew whose various duties included all electrical works on the site installing cable tray, pulling cable, terminations and RTD points in addition to heat trace. My duties were to keep the crew working in a safe manner and to make sure they maintained a high production factor that was acceptable to the client</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">September 2012 - June 2014</span>
           </div>
         </div>
 
@@ -152,7 +154,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">George Brown College</h3>
-            <div class="subheading mb-3">Programmabler Logic Controllers</div>
+            <div class="subheading mb-3">Programmable Logic Controllers</div>
             <div>Completed with honors. Writing ladder logic to control conveyor belt systems at Distribution Centers. Also completed projects including traffic light systems, and robotics for car plant automation.  </div>
           </div>
           <div class="resume-date text-md-right">
