added image to href for certificates

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <hr class="m-0" id="horizontal_line">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
@@ -251,35 +251,35 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - Build Responsive Real World Websites with HTML5 and CSS3 (Udemy)
+            <a href="img/HTML AND CSS.jpg">Certificate of Completion</a> - Build Responsive Real World Websites with HTML5 and CSS3 (Udemy)
             </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - JavaScript Beginners's Step By Step Guide
+             <a href="img/javascript basic.jpg">Certificate of Completion</a> - JavaScript Beginners's Step By Step Guide
             </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Certificate of Completion - JavaScript (Udemy)
+            <a href="img/javascript advanced.jpg">Certificate of Completion</a> - JavaScript (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - Programming for Entrepreneurs (Udemy)
+            <a href="img/javascript for entrepreneurs.jpeg.jpg">Certificate of Completion</a> - Programming for Entrepreneurs (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - Ultimite JavaScript Strings (Udemy)
+            <a href="img/javascriptstrings.jpg">Certificate of Completion</a> - Ultimite JavaScript Strings (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - The Complete Web Developer Course 2.0 (Udemy)
+            <a href="img/Web Dev 2.0 course.jpg">Certificate of Completion</a> - The Complete Web Developer Course 2.0 (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - The Web Developer Bootcamp (Udemy)
+            <a href="img/web dev bootcamp.jpg">Certificate of Completion</a> - The Web Developer Bootcamp (Udemy)
            </li>
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             Certificate of Completion - Wordpress for Beginners (Udemy)
+            <a href="img/wordpress.jpg">Certificate of Completion</a> - Wordpress for Beginners (Udemy)
            </li>
         </ul>
       </div>
