added some tooltips for the icons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
 
-</head>
+</head>    
 
 <body id="page-top">
 
@@ -73,20 +73,20 @@
           Since moving to the UAE I am interested to apply my web dev skills as a new professional direction.
           In 2017, I completed several <em>Udemy</em> courses on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line</strong></p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/steve-hughes-713980172/" target="_blank">
+          <a href="https://www.linkedin.com/in/steve-hughes-713980172/" data-toggle="tooltip" title="Linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/" target="_blank">
+          <a href="https://github.com/" data-toggle="tooltip" title="Github" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.facebook.com/profile.php?id=519616926" target="_blank">
+          <a href="https://www.facebook.com/profile.php?id=519616926" data-toggle="tooltip" title="Facebook" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://www.udemy.com/" target="_blank">
+          <a href="https://www.udemy.com/" data-toggle="tooltip" title="Udemy" target="_blank">
             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
           </a>
         </div>
-      </div>
+      </div>     
     </section>
 
     <hr class="m-0" id="horizontal_line">
@@ -195,22 +195,22 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" title="HTML5">      
             <i class="fab fa-html5"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" title="CSS3">
             <i class="fab fa-css3-alt"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" title="JavaScript">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" title="React js">
             <i class="fab fa-react"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" title="Node js">
             <i class="fab fa-node-js"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-toggle="tooltip" title="Wordpress">
             <i class="fab fa-wordpress"></i>
           </li>   
         </ul>
