--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0" id="lastname">Hughes
-          <span class="text-primary" id="firstname">Steven</span>
-        </h1>
+        <h1 id="name">Hughes Steven</h1>
         <div class="subheading mb-5">Al Zeina, A1, Unit 817 · Abu Dhabi, UAE · +971 50 948 9252 ·
           <a href="mailto:steveh385@hotmail.com">steveh385@hotmail.com</a>
         </div>
@@ -89,7 +87,7 @@
       </div>     
     </section>
 
-    <hr class="m-0" id="horizontal_line">
+    <hr>
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
@@ -145,7 +143,7 @@
 
     </section>
 
-    <hr class="m-0">
+    <hr>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
@@ -187,7 +185,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <hr>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
@@ -233,7 +231,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <hr>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
@@ -243,7 +241,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <hr>
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
