changed the portfolio site

--- a/index.html
+++ b/index.html
@@ -95,12 +95,30 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Jr Web Developer</h3>
-            <div class="subheading mb-3">AstroLabs</div>
-            <p>Currently enrolled in a AstroLabs coding bootcamp that is JavaScript based. We are learning to build a social media website from scratch. With this bootcamp we will also learn how to launch a site with Wordpress and how to deploy a site with GitHub along with GitBash, as well as buiding mobile apps.</p>
+            <h3 class="mb-0">Technical support</h3>
+            <div class="subheading mb-3">Tapco</div>
+            <p>Completed a 4-month contract at the Taweelah "B" New Extension Water and Power plant in Abu Dhabi, where i was updating all KKS assets on the NBE power and water side. This involved duites such as: </p>
+            <ul>
+              <li>Inputting all KKS tags for the equipment</li>
+              <li>Adding a detailed description for all assets</li>
+              <li>Catergorizing all critical and non critical equipment</li>
+              <li>Including a reference P&ID for the assets</li>
+              <li>Adding a spare parts list that corresponds with the equipment</li>
+            </ul>
+            <p>The last step of the job was to enter the information into the Maximo system which helped the maintenance team repair and maintain the plant in an effecient way that cut down on production down time.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary"> June 2019 - Present</span>
+            <span class="text-primary"> August 27 2019 - December 26 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Jr Web Developer</h3>
+            <div class="subheading mb-3">AstroLabs</div>
+            <p>Completed the web developer bootcamp at AstroLabs in Dubai, UAE that is JavaScript based. During this camp we learned to build a social media site which included HTML5, CSS3, JavaScript and Reactjs on the front end and MERN(MongoDB, Express. js, React, and Node. js) on the back end.</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"> June 3 2019 - August 20 2019</span>
           </div>
         </div>
 
@@ -148,6 +166,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">AstroLabs - DMCC</h3>
+            <div class="subheading mb-3">Web Developement</div>
+            <div>Completed an intensive coding bootcamp. Learning all the latest versions of the coding world.  </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 21 2019 - October 5 2019</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -212,6 +241,8 @@
             <i class="fab fa-wordpress"></i>
           </li>   
         </ul>
+      
+        
 
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
@@ -249,35 +280,43 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/HTML AND CSS.jpg">Certificate of Completion</a> - Build Responsive Real World Websites with HTML5 and CSS3 (Udemy)
+            <a href="https://www.freecodecamp.org/certification/fccd140e66e-c16f-424e-afd4-eedc5a4ff3b0/responsive-web-design" target="_blank">Certificate of Completion</a> - freeCodeCamp Responsive Web Design
             </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-             <a href="img/javascript basic.jpg">Certificate of Completion</a> - JavaScript Beginners's Step By Step Guide
+            <a href="img/web development degree.pdf" target="_blank">Certificate of Completion</a> - AstroLabs JavaScript based coding bootcamp
             </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/javascript advanced.jpg">Certificate of Completion</a> - JavaScript (Udemy)
+            <a href="img/HTML AND CSS.jpg" target="_blank">Certificate of Completion</a> - Build Responsive Real World Websites with HTML5 and CSS3 (Udemy)
+            </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+             <a href="img/javascript basic.jpg" target="_blank">Certificate of Completion</a> - JavaScript Beginners's Step By Step Guide
+            </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="img/javascript advanced.jpg" target="_blank">Certificate of Completion</a> - JavaScript (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/javascript for entrepreneurs.jpeg.jpg">Certificate of Completion</a> - Programming for Entrepreneurs (Udemy)
+            <a href="img/javascript for entrepreneurs.jpeg.jpg" target="_blank">Certificate of Completion</a> - Programming for Entrepreneurs (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/javascriptstrings.jpg">Certificate of Completion</a> - Ultimite JavaScript Strings (Udemy)
+            <a href="img/javascriptstrings.jpg" target="_blank">Certificate of Completion</a> - Ultimite JavaScript Strings (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/Web Dev 2.0 course.jpg">Certificate of Completion</a> - The Complete Web Developer Course 2.0 (Udemy)
+            <a href="img/Web Dev 2.0 course.jpg" target="_blank">Certificate of Completion</a> - The Complete Web Developer Course 2.0 (Udemy)
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/web dev bootcamp.jpg">Certificate of Completion</a> - The Web Developer Bootcamp (Udemy)
+            <a href="img/web dev bootcamp.jpg" target="_blank">Certificate of Completion</a> - The Web Developer Bootcamp (Udemy)
            </li>
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="img/wordpress.jpg">Certificate of Completion</a> - Wordpress for Beginners (Udemy)
+            <a href="img/wordpress.jpg" target="_blank">Certificate of Completion</a> - Wordpress for Beginners (Udemy)
            </li>
         </ul>
       </div>
