--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 id="name">Hughes Steven</h1>
+        <h1 id="name">Steven Hughes</h1>
         <div class="subheading mb-5">Al Zeina, A1, Unit 817 · Abu Dhabi, UAE · +971 50 948 9252 ·
           <a href="mailto:steveh385@hotmail.com">steveh385@hotmail.com</a>
         </div>
