added bootstrap icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <p class="lead mb-5">I have spent the last 20 years working as a electrician on large, diverse construction projects ranging from green energy, oil and gas, commercial and industrial.
           Since moving to the UAE I am interested to apply my web dev skills as a new professional direction.
-          In 2017, I completed several <em>Udemy</em> courses on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery and Command Line</strong></p>
+          In August 2019, I completed a Web Developer coding bootcamp that included instructions on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery, Reactjs, MongoDb, Mongoose, Express</strong> and other back end programs to help launch a fully functional social media site.</strong></p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/steve-hughes-713980172/" data-toggle="tooltip" title="Linkedin" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -239,6 +239,9 @@
           </li>
           <li class="list-inline-item" data-toggle="tooltip" title="Wordpress">
             <i class="fab fa-wordpress"></i>
+          </li> 
+          <li class="list-inline-item" data-toggle="tooltip" title="Bootstrap">
+            <i class="fab fa-bootstrap"></i>
           </li>   
         </ul>
       
