--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical support</h3>
             <div class="subheading mb-3">Tapco</div>
-            <p>Completed a 4-month contract at the Taweelah "B" New Extension Water and Power plant in Abu Dhabi, where i was updating all KKS assets on the NBE power and water side. This involved duites such as: </p>
+            <p>Completed a 4-month contract at the Taweelah "B" New Extension Water and Power plant in Abu Dhabi, where i was updating all KKS assets on the NBE power and water side. This involved duties such as: </p>
             <ul>
               <li>Inputting all KKS tags for the equipment</li>
               <li>Adding a detailed description for all assets</li>
