--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="subheading mb-5">Al Zeina, A1, Unit 817 · Abu Dhabi, UAE · +971 50 948 9252 ·
           <a href="mailto:steveh385@hotmail.com">steveh385@hotmail.com</a>
         </div>
-        <p class="lead mb-5">I have spent the last 20 years working as a electrician on large, diverse construction projects ranging from green energy, oil and gas, commercial and industrial.
+        <p class="lead mb-5">I have spent the last 20 years working as an electrician on large, diverse construction projects ranging from green energy, oil and gas, commercial and industrial.
           Since moving to the UAE I am interested to apply my web dev skills as a new professional direction.
           In August 2019, I completed a Web Developer coding bootcamp that included instructions on <strong>HTML5, CSS3, JavaScript, How to Deploy a Website, Node.js, jquery, Reactjs, MongoDb, Mongoose, Express</strong> and other back end programs to help launch a fully functional social media site.</strong></p>
         <div class="social-icons">
