added to resume

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
         <div class="subheading mb-5">Al Zeina, A1, Unit 817 · Abu Dhabi, UAE · <a href="tel:+971.050.948.9252">+971 50 948 9252</a> ·
           <a href="mailto:steveh385@hotmail.com">steveh385@hotmail.com</a>
         </div>
-        <p class="lead mb-5">I have spent the last 20 years working as an electrician on large diverse construction projects ranging from green energy, oil and gas, Hydro, commercial and industrial. As I gained experience in these jobs I realised that I was well suited in leadership roles.
+        <p class="mb-5">I have spent the last 20 years working as an electrician on large diverse construction projects ranging from oil and gas, green energy, Hydro, commercial and industrial. As I gained experience in these jobs I realised that I was well suited in leadership roles. While on these sites I worked as a foreman and general foreman leading teams on construction, commissioning and maintenance activites.<br/>
+          Several of these live sites needed many upgrades and new installation of gas detection and explosion proof equipment that inclued:
+          <ul>
+            <li>Class 1 Div 2 labaled AMCA type A spark-resistant TEAO evaporator motors</li>
+            <li>Class 1 Div 2 labaled AMCA type A spark-resistant TEFC condensor motors</li>
+            <li>Built-in NFPA 496 compliant purge & pressurization</li>
+            <li>Corrosive and combustible gas alarms</li>
+            <li>Standard or free standing fresh air intake stacks</li>
+          </ul>
         <br/>I am a Canadian citizen and I have been living in Abu Dhabi for over 2 years. I am curenlty looking for work in any of the sectors mentioned above. I have all my electrical certifications attested from Canada.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/steve-hughes-713980172/" data-toggle="tooltip" title="Linkedin" target="_blank">
@@ -185,6 +193,24 @@
             <span class="text-primary">September 2012 - June 2014</span>
           </div>
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Electrical Inspector</h3>
+            <div class="subheading mb-3">Shell Scotford</div>
+            <p>The Shell Scotford Complex consists of a bitumen upgrader, oil refinery, chemicals plant and a carbon capture and storage facility. It is one of North America's most effecient, modern and intergrated hydrocarbon processing sites, converting oil sands bitumen into finished, marketable products.</p>
+            <p>I worked as a QA/QC(quality assurance, quality control)inspector, inspecting electrical installations that were required to be completed and certified to specific and stringent specifications. Duties included 'meggering' cables and the inspection of heat trace and cable tray, as well as all control panels and MCC(motor control center). I completed written reports on my findings with recommendations to Suncor management. Other duties included:</p>
+            <ul>
+              <li>Checking on correct phasing on all transformers up to 25KV</li>
+              <li>Inspected that all high voltage stress cones on oil filled and XLPE terminations and connections where completed to industry standards</li>
+              <li>Made sure all equipment was properly identified and met CEC(Canadian Electrical Code) standard requirements</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2010 - July 2012</span>
+          </div>
+        </div>
+
 
       </div>
 
@@ -309,7 +335,13 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h3>Click on link to view Certificate</h3>
         <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="img/Electrical certificate.jpg" target="_blank">Certificate of Completion</a> - Electrical Certificate
+            </li>
+          <li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://www.freecodecamp.org/certification/fccd140e66e-c16f-424e-afd4-eedc5a4ff3b0/responsive-web-design" target="_blank">Certificate of Completion</a> - freeCodeCamp Responsive Web Design
