--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">AstroLabs - DMCC</h3>
             <div class="subheading mb-3">Web Developement</div>
@@ -231,7 +231,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 21 2019 - October 5 2019</span>
           </div>
-        </div>
+        </div> -->
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -247,8 +247,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Northern Alberta Institute of Technology</h3>
-            <div class="subheading mb-3">Electrical Journeyman Certificate</div>
-            <div>Received my journeyman electrical licence where I specialized in oil and gas, green energy, industrial, commercial and fire alarm systems </div>
+            <div class="subheading mb-3">Bachelor in Electrical Engineer</div>
+            <div>Received my Bachelor in Electrical Engineer licence where I specialized in oil and gas, green energy, industrial, commercial and fire alarm systems </div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">February 1996 - April 2002</span>
