--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Jr Web Developer</h3>
             <div class="subheading mb-3">AstroLabs</div>
@@ -126,7 +126,7 @@
               <div class="resume-date text-md-right">
             <span class="text-primary"> June 3 2019 - August 20 2019</span>
           </div>
-        </div>
+        </div>-->
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
